--- a/styles/shared/fresh-header.css
+++ b/styles/shared/fresh-header.css
@@ -1,8 +1,8 @@
 .fresh-header {
-  background-color: rgb(19, 25, 33);
+  background-color: rgb(16, 42, 42);
   color: white;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 16px;
+  padding-right: 16px;
 
   display: flex;
   align-items: center;
@@ -12,11 +12,11 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 60px;
+  height: 65px;
 }
 
 .fresh-header-left-section {
-  width: 180px;
+  width: 175px;
 }
 
 @media (max-width: 800px) {
@@ -27,9 +27,9 @@
 
 .header-link {
   display: inline-block;
-  padding: 6px;
-  border-radius: 2px;
-  cursor: pointer;
+  padding: 5px;
+  border-radius: 3px;
+  cursor: cross-browser;
   text-decoration: none;
   border: 1px solid rgba(0, 0, 0, 0);
 }
@@ -74,8 +74,8 @@
   height: 38px;
   padding-left: 15px;
   border: none;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
