--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -92,7 +92,7 @@
   }
 }
 
-.product-image {
+.produce-image {
   max-width: 100%;
   max-height: 120px;
 
@@ -104,18 +104,18 @@
   margin-right: auto;
 }
 
-.product-name {
+.produce-name {
   font-weight: 700;
   margin-bottom: 8px;
 }
 
-.product-price {
+.produce-price {
   color: rgb(177, 39, 4);
   font-weight: 700;
   margin-bottom: 5px;
 }
 
-.product-quantity .link-primary {
+.produce-quantity .link-primary {
   margin-left: 3px;
 }
 
