--- a/styles/shared/fresh-header.css
+++ b/styles/shared/fresh-header.css
@@ -76,12 +76,14 @@
 .returns-text {
   display: block;
   font-size: 13px;
+  color: white;
 }
 
 .orders-text {
   display: block;
   font-size: 15px;
   font-weight: 700;
+  color: white;
 }
 
 .cart-link {
