--- a/frontend/styles/pages/fresh.css
+++ b/frontend/styles/pages/fresh.css
@@ -1,10 +1,16 @@
 .main {
-  margin-top: 60px;
+  margin-top: 70px;
 }
 
 .produces-grid {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(7, 1fr);
+}
+
+@media (max-width: 1500px) {
+  .produces-grid {
+    grid-template-columns: repeat(8, 1fr);
+  }
 }
 
 @media (max-width: 2000px) {
@@ -13,47 +19,41 @@
   }
 }
 
-@media (max-width: 1600px) {
+@media (max-width: 1300px) {
   .produces-grid {
     grid-template-columns: repeat(6, 1fr);
   }
 }
 
-@media (max-width: 1300px) {
-  .produces-grid {
-    grid-template-columns: repeat(5, 1fr);
-  }
-}
-
-@media (max-width: 1000px) {
+@media (max-width: 1500px) {
   .produces-grid {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .produces-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (max-width: 575px) {
+@media (max-width: 600px) {
   .produces-grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
   .produces-grid {
     grid-template-columns: 1fr;
   }
 }
 
 .produce-container {
-  padding-top: 40px;
-  padding-bottom: 25px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-top: 45px;
+  padding-bottom: 24px;
+  padding-left: 27px;
+  padding-right: 27px;
 
   border-right: 1px solid rgb(231, 231, 231);
   border-bottom: 1px solid rgb(231, 231, 231);
@@ -67,21 +67,19 @@
   justify-content: center;
   align-items: center;
 
-  height: 180px;
-  margin-bottom: 20px;
+  height: 200x;
+  margin-bottom: 18px;
 }
 
 .produce-image {
-  /* Images will overflow their container by default. To
-    prevent this, we set max-width and max-height to 100%
-    so they stay inside their container. */
+  
   max-width: 100%;
   max-height: 100%;
 }
 
 .produce-name {
-  height: 40px;
-  margin-bottom: 5px;
+  height: 5px;
+  margin-bottom: 6px;
 }
 
 .produce-rating-container {
@@ -102,7 +100,7 @@
 }
 
 .produce-price {
-  font-weight: 700;
+  font-weight: 750;
   margin-bottom: 10px;
 }
 
@@ -129,12 +127,12 @@
 }
 
 .added-to-cart img {
-  height: 20px;
-  margin-right: 5px;
+  height: 18px;
+  margin-right: 4px;
 }
 
 .add-to-cart-button {
   width: 100%;
-  padding: 8px;
-  border-radius: 50px;
+  padding: 9px;
+  border-radius: 55px;
 }
